--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 @font-face {font-family: Pusab; src: url('Pusab.ttf')}
 body {
     background-image: linear-gradient(#323232, #171717);
-    height: 100vh;
+    height: auto;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
