--- a/index.html
+++ b/index.html
@@ -1,49 +1,1 @@
-<link id="favicon" rel="icon" type="image/x-icon" href="">
-<title id="title">Biography</title>
-<img src="logo.png" class="logo"><br>
-<img id="portrait" src="">
-<div id="bio">
-	<p id="userbio">Loading Biography...</p>
-</div>
-<script src="script.js"></script>
-<style>
-@font-face {font-family: Pusab; src: url('Pusab.ttf')}
-body {
-    background-image: linear-gradient(#323232, #171717);
-    height: auto;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-	color: white;
-	text-align:center;
-}
-h1 {
-	font-family: Pusab, Arial;
-	-webkit-text-stroke-width: 1px;
-  	-webkit-text-stroke-color: black;
-	font-size: 100px;
-}
-p {
-	font-family: Pusab, Arial;
-	-webkit-text-stroke-width: 1px;
-  	-webkit-text-stroke-color: black;
-	font-size: 25px;
-}
-.logo {
-	min-width: 450px;
-	max-width: 700;
-}
-#bio {
-	background-image: linear-gradient(#323232, #171717);
-	width: 70%;
-	padding: 10px;
-	border-style:ridge;
-	border-width: 10px;
-	margin-top: 20px;
-	display:block;
-	margin-left:auto;
-	margin-right:auto;
-	box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
-}
-</style>
+<link id="favicon" rel="icon" type="image/x-icon" href=""><title id="title">Biography</title><link rel="stylesheet" href="style.css"><img src="logo.png" class="logo"><br><img id="portrait" src=""><div id="bio"><p id="userbio">Loading Biography...</p><input id="search" placeholder="Username/PlayerID" autocomplete="off"><button onclick="searchPlayer()" id="sbutton">Search</button></div><p class="thanks">This website is possible thanks to Colon's <a href="https://gdbrowser.com/api" target="_blank">GDBrowser API</a></p><script src="script.js"></script>
